--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ anyhow = "1.0.61"
 crossbeam-channel = "0.5.6"
 ctrlc = "3.2.2"
 ethers = "0.17.0"
+hex = "0.4.3"
 serde = "1.0.143"
 serde_json = "1.0.83"
 structopt = "0.3.26"
